--- a/mission/styles.css
+++ b/mission/styles.css
@@ -1,15 +1,21 @@
 body {
+    font-family: 'Times New Roman', Times, serif;
     max-width: 600px;
     justify-self: center;
     padding: 60px;
+    display: grid;
+    background-color: white;
+    color: black;
 }
-h1, h2, p, p1, ol {
-    font-family: 'Times New Roman', Times, serif;
+.dark {
+    background-color: black;
+    color: white;
 }
 h1{
-    align-self: center;
+    align-self: flex-end;
     justify-self: center;
     text-transform: uppercase;
+    font-size: 40px;
     line-height: 1.5;
     letter-spacing: 2px;
 }
@@ -18,23 +24,30 @@ h2 {
     align-self: flex;
     justify-self: center;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 17px;
     padding-bottom: 20px;
 }
+.dark h2 {
+    color: #006EB6;
+}
+#mode{
+    justify-self: center;
+}
 p {
-    font-size: 17px;
+    font-size: 15px;
     line-height: 1.5;
 }
 p1 {
     font-style: italic;
-    font-size: 17px;
+    font-size: 15px;
     line-height: 1.5;
 }
 ol {
-    font-size: 17px;
+    font-size: 15px;
     line-height: 1.5;
 }
-div {
+img {
     justify-self: center;
     padding: 20px;
 }
+
