--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -9,10 +9,24 @@ header {
     background-color: #52489c;
     color: #ebebeb;
     padding: 10px;
+    display: grid;
 }
 
 h1 {
     justify-self: center;
+}
+
+.menu-button {
+    width: 100px;
+    justify-self: center;
+    background-color: #52489c;
+    font-size: 20px;
+    color: #ebebeb;
+    border: none;
+}
+
+.hide {
+    display: none;
 }
 
 a, a:visited {
@@ -51,6 +65,23 @@ img {
     border-width: 8px;
     border-color: white;
     box-shadow: 10px 10px 10px grey;
+}
+
+dialog {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .6);
+    margin: 20vh auto;
+}
+
+img {
+    max-height: 100%;
+    z-index: 10;
+}
+
+.close-viewer {
+    position: absolute;
+    top: 20vh;
 }
 
 footer {
