--- a/blog/blog.css
+++ b/blog/blog.css
@@ -14,6 +14,22 @@ h1 {
     font-family: Lora, serif;
 }
 
+#description {
+    justify-self: left;
+    padding-left: 10px;
+    color: #473144;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 12px;
+}
+
+.description {
+    justify-self: left;
+    padding-left: 10px;
+    color: #473144;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 12px;
+}
+
 nav {
     grid-template-columns: 1/2;
     grid-template-rows: 2/3;
@@ -43,7 +59,7 @@ main {
     grid-gap: 10px;
 }
 
-#book1 {
+#book1{
     grid-column: 1/2;
     grid-row: 1/2;
     display: grid;
@@ -57,7 +73,14 @@ main {
     grid-template-columns: 1fr 2fr 1fr;
 }
 
-#info {
+#book3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+}
+
+.info {
     justify-items: right;
     border-right: solid 1px #EFC69B;
     padding-right: 5px;
@@ -78,16 +101,8 @@ h2 {
     justify-self: center;
 }
 
-p1 {
-    justify-self: left;
-    padding-left: 10px;
-    color: #473144;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 12px;
-}
-
 #filters {
-    grid-row: 1/3;
+    grid-row: 1/4;
     border: solid 1px #EFC69B;
     margin-right: 10px;
     font-family: Helvetica, Arial, sans-serif;
