--- a/Week9/recipes/recipes.css
+++ b/Week9/recipes/recipes.css
@@ -44,17 +44,25 @@ h1 {
 
 .recipe {
     display: grid;
-    grid-template-rows: 2fr .5fr .25fr;
-    width: 300px;
+    grid-template-rows: auto auto auto;
+    max-width: 300px;
+    width: 100%;
     border: solid black 1px;
     border-radius: 10px;
     padding: 10px;
     justify-self: center;
+    background-color: white;
 }
 
+
 .image {
-    width: 300px;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    border-radius: 10px; 
+    object-fit: cover;   
 }
+
 
 #tags {
     font-family: var(--primary-font);
